fixes things spacing on bottom of things page

--- a/www/css/index.less
+++ b/www/css/index.less
@@ -43,7 +43,6 @@ body {
 div.view-container {
   position: relative;
   margin-top: 0px;
-  height: 100%;
 }
 
 div[ng-view] {
@@ -51,7 +50,7 @@ div[ng-view] {
 
   // spacing for bottom bar
   &>div>:last-child {
-    margin-bottom: 64px;
+    margin-bottom: 0px;
   }
 }
 
